bugfix - fixing overlay when scrollbar visible

--- a/css/myth/ngDialog.css
+++ b/css/myth/ngDialog.css
@@ -85,3 +85,7 @@ html.ngdialog-open,
 body.ngdialog-open {
     overflow: hidden;
 }
+
+.ngdialog.ngdialog-theme-default.slide .ngdialog-overlay.scrollbar-visible {
+    right: 15px;
+}
