--- a/css/ngDialog.css
+++ b/css/ngDialog.css
@@ -112,3 +112,7 @@ html.ngdialog-open,
 body.ngdialog-open {
   overflow: hidden;
 }
+
+.ngdialog.ngdialog-theme-default.slide .ngdialog-overlay.scrollbar-visible {
+  right: 15px;
+}
